// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie component should have image 1`] = `
<li
  className="list-group-item list-group-item-action movie"
  onClick={[Function]}
>
  <strong>
    Title
  </strong>
  <img
    alt="Title"
    className="rounded float-right"
    src="https://image.mock.api/small/image-path.jpg"
  />
  
</li>
`;

exports[`Movie component should not have image 1`] = `
<li
  className="list-group-item list-group-item-action movie"
  onClick={[Function]}
>
  <strong>
    Title
  </strong>
  
  
</li>
`;
